--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -2,40 +2,50 @@
 main::after{
     background-color: linear-gradient(0deg, #000 20%, rgba(0, 0, 0, 0.189) 65%) no-repeat;
     width: 100vw;
-    
+    z-index: -1;
 }
-main .personagem .image{
-height: 85%;
+ .img{
+width: 100%;
+height:100%;
+object-fit: contain;
+object-position: 65%  ;
+display: flex;
+top: 0;
+left: 0;
+z-index: 1;
+
 }
 .conteudo{
-    justify-content: flex-end;
+justify-content: flex-end;
     left: 0;
     max-width: 100vw;
-    padding: 40px;
+    padding: 3rem;
 }
 
+ .logo{
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 30%;
+}
     .conteudo .nome-personagem{
-        
         font-size: 36px;
     }
     .conteudo .descricao{
-        max-width: 500px;
+        max-width: 32rem;
+       margin-left: 1rem;
     }
     .botoes{
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items: flex-start;
-        width: 620px;
-        padding: 10px;
-        max-height: 100px;
+        display: inline;
         top: 0;
         left: 0;
         position: fixed;
-     
+         background-color: rgba(0, 0, 0, 0.6);
+        padding: 0.5rem;
         
     }
     .botoes .botao{
-        max-width: 60px;
+        max-width:4rem ;
     }
     
 }
